# raylib-pointers-ideas

./: .gitignore  CMakeLists.txt  README.md  build_wasm.sh  dump.txt  game.wasm  package.json
example/: test-bun.js  test.c
generator/: api.js  index.js  interface_header.js  native.js
src/: api.h  lib.c  raylib-pointers.h  test-bun.js  test-wasm.js  test-wasm1.c  test.c
tools/: generate_api.js  generate_bun.js
